get reservation all venue by admin now can all status, new get reservation in specific venue by admin, new get player reservation by player, new get joined reservation by player
